--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .DS_Store
+.coverage
 /PITCHME.html
 /PITCHME.pdf
 /PITCHME.pptx
+/cdk.out
+/code/sustainable_personal_accounts.egg-info
 /node_modules
-/package.json
 /package-lock.json
+/venv
