add stack and lambda to expire accounts at regular intervals

--- a/tests/settings/sample_settings.yaml
+++ b/tests/settings/sample_settings.yaml
@@ -15,3 +15,8 @@ released_accounts:
 
 expired_accounts:
   organisational_unit: ou-efghij
+
+# Reference:
+# - https://docs.aws.amazon.com/lambda/latest/dg/services-cloudwatchevents-expressions.html
+#
+expiration_expression: "cron(0 18 ? * SAT *)"
