--- a/tests/settings/sample_settings.yaml
+++ b/tests/settings/sample_settings.yaml
@@ -1,7 +1,27 @@
-# the buildspec templates to be used, relatively to the code/ directory
-#
-buildspec_prepare: "buildspec/prepare_account_template.yaml"
-buildspec_purge: "buildspec/purge_account_template.yaml"
+automation:
+
+  # the target account for the deployment of the solution
+  #
+  account_id: "123456789012"
+
+  # the target region for the deployment of the solution
+  #
+  region: "eu-west-1"
+
+
+preparation:
+
+  # when the solution is deployed, the file below is read and pushed to the parameter store
+  #
+  buildspec_template_file: "tests/buildspec/preparation_account_template.yaml"
+
+
+purge:
+
+  # when the solution is deployed, the file below is read and pushed to the parameter store
+  #
+  buildspec_template_file: "tests/buildspec/purge_account_template.yaml"
+
 
 # this is displayed in the monitoring dashboard
 cockpit_markdown_text: |
