--- a/tests/buildspec/purge_account_template.yaml
+++ b/tests/buildspec/purge_account_template.yaml
@@ -3,6 +3,7 @@ version: 0.2
 env:
   variables:
     PURGE_EMAIL: a@b.com
+    PURGE_MESSAGE: SpaPurgeMessage
 
 phases:
   install:
@@ -143,5 +144,5 @@ phases:
       - echo "Running AWS-Nuke on account $ACCOUNT"
       - aws-nuke -c aws-nuke-config.yaml --force | tee aws-nuke.log
       - cat aws-nuke.log | tail -n 50 >aws-nuke-short.log
-      - aws ssm put-parameter --name SpaPurgeLog --type String --value file://aws-nuke-short.log --overwrite
+      - aws ssm put-parameter --name "$PURGE_MESSAGE" --type String --value file://aws-nuke-short.log --overwrite
       - echo "Account purge completed on $(date)"
