--- a/tests/settings/sample_settings.yaml
+++ b/tests/settings/sample_settings.yaml
@@ -65,8 +65,11 @@ organizational_units:
 
   - identifier: 'ou-1234'
     note: 'a container for some accounts'
-    cost_budget: 500.0
+    account_tags:
+      CostCenter: 'abc'
+      Sponsor: 'Foo Bar'
     budget_name: 'DataTeamBudget'
+    cost_budget: 500.0
     preparation_variables:
       HELLO: WORLD
     purge_variables:
@@ -74,8 +77,11 @@ organizational_units:
 
   - identifier: 'ou-5678'
     note: 'another account container'
-    cost_budget: 300
+    account_tags:
+      CostCenter: 'xyz'
+      Sponsor: 'Mister Jones'
     budget_name: 'DevelopmentTeamBudget'
+    cost_budget: 300
     preparation_variables:
       HELLO: UNIVERSE
     purge_variables:
