--- a/tests/settings/sample_settings.yaml
+++ b/tests/settings/sample_settings.yaml
@@ -35,6 +35,11 @@ automation:
   #
   role_name_to_manage_codebuild: 'AWSControlTowerExecution'
 
+  # these tags are used on resources deployed in automation account
+  #
+  tags:
+    CostCenter: 'shared'
+
   # this defines the amount of text sent to logs
   # - allowed values: DEBUG, INFO, WARNING, ERROR, CRITICAL
   # - default value: INFO
