make relay of alert to central subscribers work end-to-end (with sns -> sqs -> lambda -> sns)

--- a/tests/buildspec/preparation_account_template.yaml
+++ b/tests/buildspec/preparation_account_template.yaml
@@ -63,6 +63,10 @@ phases:
             {
               "Address": "${BUDGET_EMAIL}",
               "SubscriptionType": "EMAIL"
+            },
+            {
+              "Address": "${TOPIC_ARN}",
+              "SubscriptionType": "SNS"
             }
           ]
         }
