preserve control tower logs over time

--- a/tests/buildspec/purge_account_with_awsweeper_template.yaml
+++ b/tests/buildspec/purge_account_with_awsweeper_template.yaml
@@ -94,7 +94,8 @@ phases:
           created:
             before: ${MAXIMUM_AGE}
         aws_cloudwatch_log_group:
-        - created:
+        - id: NOT((/aws/lambda/aws-controltower|aws-controltower/CloudTrailLogs))
+          created:
             before: ${MAXIMUM_AGE}
         aws_ami:
         - created:
