--- a/tests/buildspec/purge_account_with_awsweeper_template.yaml
+++ b/tests/buildspec/purge_account_with_awsweeper_template.yaml
@@ -6,6 +6,8 @@ env:
     PURGE_EMAIL: a@b.com
     PURGE_MESSAGE: SpaPurgeMessage
     PURGE_MODE: --dry-run
+    TAG_KEY: purge
+    TAG_VALUE: me
 
 phases:
   install:
@@ -23,63 +25,110 @@ phases:
         us-east-1
         EOF
       # full list of resource types at https://github.com/jckuester/awsweeper#supported-resources
+      - echo "Wave 1 - Purge resources without tags or with tag '${TAG_KEY}'='${TAG_VALUE}'"
       - |
         cat <<EOF > filter.yaml
         aws_cloudformation_stack:
         - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
           tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_dynamodb_global_table:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_dynamodb_table:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_rds_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_rds_global_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_db_instance:  # rds
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_db_snapshot:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_ebs_snapshot:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_ebs_volume:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_ecs_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_efs_file_system:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_eip:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_eks_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_fsx_lustre_file_system:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_fsx_windows_file_system:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_instance:  # ec2
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_iam_group:  # forbidden!
-        - tagged: false
         aws_iam_user:  # forbidden!
-        - tagged: false
         aws_kinesis_stream:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_lambda_function:
         - id: NOT(aws-controltower)
           tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_msk_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_redshift_cluster:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_route53_zone:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_sfn_state_machine:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_sns_topic:
         - id: NOT(aws-controltower)
           tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         aws_sqs_queue:
         - tagged: false
+        - tags:
+            ${TAG_KEY}: ${TAG_VALUE}
         EOF
       - |
         while read REGION
@@ -87,14 +136,11 @@ phases:
           echo "Running AWSWEEPER on account $ACCOUNT in region $REGION" >> awsweeper.log
           ./bin/awsweeper ${PURGE_MODE} --region ${REGION} filter.yaml | tee -a awsweeper.log
         done < regions.txt
+      - echo "Wave 2 - Purge resources created ${MAXIMUM_AGE} ago"
       - |
         cat <<EOF > filter.yaml
         aws_cloudformation_stack:
         - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
-          created:
-            before: ${MAXIMUM_AGE}
-        aws_cloudwatch_log_group:
-        - id: NOT((/aws/lambda/aws-controltower|aws-controltower/CloudTrailLogs))
           created:
             before: ${MAXIMUM_AGE}
         aws_ami:
