--- a/tests/settings/sample_settings.yaml
+++ b/tests/settings/sample_settings.yaml
@@ -63,7 +63,7 @@ worker:
 
   # this is the buildspec tempalte for the purge of an account managed by SPA
   #
-  purge_buildspec_template_file: "tests/buildspec/purge_account_template.yaml"
+  purge_buildspec_template_file: "tests/buildspec/purge_account_with_awsweeper_template.yaml"
 
 
 # these are organizational units where accounts are managed by the solution
@@ -89,16 +89,11 @@ organizational_units:
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
       feature: enabled
 
-      # name of the budget created in each account
-      budget_name: 'DataTeamBudget'
-
-      # amount of monthly budget for individual account
-      cost_budget: 500.0
-
       # passed to Codebuild project for the preparation of an account
       variables:
-        HELLO: WORLD
-
+        ALERT_THRESHOLD: 80 # percentage of budget
+        BUDGET_AMOUNT: 500.0 # USD
+        BUDGET_NAME: DataTeamBudget
 
     # purge of expired account
     #
@@ -111,6 +106,8 @@ organizational_units:
       variables:
         MAXIMUM_AGE: 6M  # '5d', '3M', '1y', etc.
         PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
+        TAG_KEY: purge
+        TAG_VALUE: me
 
   # settings specific to accounts placed in this organizational unit
   #
@@ -131,15 +128,12 @@ organizational_units:
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
       feature: disabled
 
-      # name of the budget created in each account
-      budget_name: 'DevelopmentTeamBudget'
-
-      # amount of monthly budget for individual account
-      cost_budget: 300
-
       # passed to Codebuild project for the preparation of an account
       variables:
-        HELLO: UNIVERSE
+        ALERT_THRESHOLD: 90
+        ALERT_THRESHOLD: 90 # percentage of budget
+        BUDGET_AMOUNT: 300 # USD
+        BUDGET_NAME: DevelopmentTeamBudget
 
 
     # purge of expired account
@@ -153,3 +147,5 @@ organizational_units:
       variables:
         MAXIMUM_AGE: 6M  # '5d', '3M', '1y', etc.
         PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
+        TAG_KEY: test
+        TAG_VALUE: test
