--- a/tests/buildspec/purge_account_with_awsweeper_template.yaml
+++ b/tests/buildspec/purge_account_with_awsweeper_template.yaml
@@ -12,171 +12,176 @@ env:
 phases:
   install:
     commands:
-      - curl -sSfL --retry 3 https://raw.githubusercontent.com/jckuester/awsweeper/master/install.sh | sh -s v0.11.1
+    - ACCOUNT=$(aws sts get-caller-identity --query Account --output text)
+    - echo $MAXIMUM_AGE
+    - echo $PURGE_EMAIL
+    - echo $PURGE_MESSAGE
+    - echo $PURGE_MODE
+    - echo "${TAG_KEY}=${TAG_VALUE}"
+    - curl -sSfL --retry 3 https://raw.githubusercontent.com/jckuester/awsweeper/master/install.sh | sh -s v0.11.1
   build:
     commands:
-      - echo "Account purge started on $(date)"
-      - ACCOUNT=$(aws sts get-caller-identity --query Account --output text)
-      - |
-        cat <<EOF > regions.txt
-        eu-west-1
-        eu-west-3
-        eu-central-1
-        us-east-1
-        EOF
-      # full list of resource types at https://github.com/jckuester/awsweeper#supported-resources
-      - echo "Wave 1 - Purge resources without tags or with tag '${TAG_KEY}'='${TAG_VALUE}'"
-      - |
-        cat <<EOF > filter.yaml
-        aws_cloudformation_stack:
-        - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
-          tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_dynamodb_global_table:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_dynamodb_table:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_rds_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_rds_global_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_db_instance:  # rds
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_db_snapshot:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_ebs_snapshot:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_ebs_volume:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_ecs_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_efs_file_system:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_eip:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_eks_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_fsx_lustre_file_system:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_fsx_windows_file_system:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_instance:  # ec2
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_iam_group:  # forbidden!
-        aws_iam_user:  # forbidden!
-        aws_kinesis_stream:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_lambda_function:
-        - id: NOT(aws-controltower)
-          tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_msk_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_redshift_cluster:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_route53_zone:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_sfn_state_machine:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_sns_topic:
-        - id: NOT(aws-controltower)
-          tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        aws_sqs_queue:
-        - tagged: false
-        - tags:
-            ${TAG_KEY}: ${TAG_VALUE}
-        EOF
-      - |
-        while read REGION
-        do
-          echo "Running AWSWEEPER on account $ACCOUNT in region $REGION" >> awsweeper.log
-          ./bin/awsweeper ${PURGE_MODE} --region ${REGION} filter.yaml | tee -a awsweeper.log
-        done < regions.txt
-      - echo "Wave 2 - Purge resources created ${MAXIMUM_AGE} ago"
-      - |
-        cat <<EOF > filter.yaml
-        aws_cloudformation_stack:
-        - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
-          created:
-            before: ${MAXIMUM_AGE}
-        aws_ami:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_ebs_snapshot:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_ebs_volume:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_ec2_fleet:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_instance:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_efs_file_system:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_fsx_lustre_file_system:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_fsx_windows_file_system:
-        - created:
-            before: ${MAXIMUM_AGE}
-        aws_db_instance:
-        - created:
-            before: ${MAXIMUM_AGE}
-        EOF
-      - |
-        while read REGION
-        do
-          echo "Running AWSWEEPER on account $ACCOUNT in region $REGION" >> awsweeper.log
-          ./bin/awsweeper ${PURGE_MODE} --region ${REGION} filter.yaml | tee -a awsweeper.log
-        done < regions.txt
-      - cat awsweeper.log | tail -c 4000 >purge-message.txt
-      - aws ssm put-parameter --name "$PURGE_MESSAGE" --type String --value file://purge-message.txt --overwrite
-      - echo "Account purge completed on $(date)"
+    - echo "Purge of account ${ACCOUNT} started on $(date)"
+    - |
+      cat <<EOF > regions.txt
+      eu-west-1
+      eu-west-3
+      eu-central-1
+      us-east-1
+      EOF
+    # full list of resource types at https://github.com/jckuester/awsweeper#supported-resources
+    - echo "Wave 1 - Purge resources without tags, or with tag '${TAG_KEY}'='${TAG_VALUE}'"
+    - |
+      cat <<EOF > filter.yaml
+      aws_cloudformation_stack:
+      - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
+        tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_dynamodb_global_table:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_dynamodb_table:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_rds_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_rds_global_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_db_instance:  # rds
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_db_snapshot:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_ebs_snapshot:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_ebs_volume:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_ecs_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_efs_file_system:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_eip:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_eks_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_fsx_lustre_file_system:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_fsx_windows_file_system:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_instance:  # ec2
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_iam_group:  # forbidden!
+      aws_iam_user:  # forbidden!
+      aws_kinesis_stream:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_lambda_function:
+      - id: NOT(aws-controltower)
+        tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_msk_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_redshift_cluster:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_route53_zone:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_sfn_state_machine:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_sns_topic:
+      - id: NOT(aws-controltower)
+        tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      aws_sqs_queue:
+      - tagged: false
+      - tags:
+          ${TAG_KEY}: ${TAG_VALUE}
+      EOF
+    - |
+      while read REGION
+      do
+        echo "Running AWSWEEPER on account $ACCOUNT in region $REGION" >> awsweeper.log
+        ./bin/awsweeper ${PURGE_MODE} --region ${REGION} filter.yaml | tee -a awsweeper.log
+      done < regions.txt
+    - echo "Wave 2 - Purge resources created ${MAXIMUM_AGE} ago"
+    - |
+      cat <<EOF > filter.yaml
+      aws_cloudformation_stack:
+      - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
+        created:
+          before: ${MAXIMUM_AGE}
+      aws_ami:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_ebs_snapshot:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_ebs_volume:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_ec2_fleet:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_instance:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_efs_file_system:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_fsx_lustre_file_system:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_fsx_windows_file_system:
+      - created:
+          before: ${MAXIMUM_AGE}
+      aws_db_instance:
+      - created:
+          before: ${MAXIMUM_AGE}
+      EOF
+    - |
+      while read REGION
+      do
+        echo "Running AWSWEEPER on account $ACCOUNT in region $REGION" >> awsweeper.log
+        ./bin/awsweeper ${PURGE_MODE} --region ${REGION} filter.yaml | tee -a awsweeper.log
+      done < regions.txt
+    - cat awsweeper.log | tail -c 4000 >purge-message.txt
+    - aws ssm put-parameter --name "$PURGE_MESSAGE" --type String --value file://purge-message.txt --overwrite
+    - echo "Account purge completed on $(date)"
