remove obsolete budget name that was used in previous versions of the software

--- a/tests/buildspec/preparation_account_template.yaml
+++ b/tests/buildspec/preparation_account_template.yaml
@@ -98,3 +98,5 @@ phases:
       else
         echo "No budget modification"
       fi
+    - echo "Removing automatically past budget"
+    - aws budgets delete-budget --account-id $ACCOUNT --budget-name SPA-budget || true
